--- a/inputs/templates/MonthlyUpdate.html
+++ b/inputs/templates/MonthlyUpdate.html
@@ -184,6 +184,9 @@
         #bknumber {
             margin-left: 89px;
         }
+        #shipinstr {
+            margin-left: 63px;
+        }
     </style>
 
     {% load static %}
@@ -265,6 +268,10 @@
             {{ form.bknumber.label }}
             {{ form.bknumber }}
             
+        </div>
+        <div class="line1">
+            {{ form.shipinstr.label }}
+            {{ form.shipinstr }}
         </div>
         <a href = "{% url 'MonthlyDelete' id  %}" class="delete">Del</a>
         <button type="submit" class="button">OK</button>
