--- a/inputs/templates/UpdateShipment.html
+++ b/inputs/templates/UpdateShipment.html
@@ -160,6 +160,7 @@
             {{ form.ETA }}
             {{ form.SI.label }}
             {{ form.SI }}
+            {{ form.shipinstr }}
         </div>
         <button type="submit" class="button">Submit</button>
         <a href = "{% url 'Monthly' Shipment %}" class='link'>Monthly</a>
