--- a/inputs/templates/UpdateShipment1.html
+++ b/inputs/templates/UpdateShipment1.html
@@ -1,3 +1,6 @@
+
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,10 +12,6 @@
             border-radius: 1px;
            
             }
-        
-
-        
-
         
         .container1 {
             position: absolute;
@@ -33,8 +32,9 @@
         }
         
         .h2 {
-            margin-left: 50px;
-            margin-top: 50px;
+            position: absolute;
+            left: 50px;
+            top: 50px;
             font-family: sohne, "Helvetica Neue", Helvetica, Arial, sans-serif;
             font-size:400%;
             font-weight: 700%;
@@ -43,11 +43,10 @@
             text-decoration: none;
             position: absolute;
         }
-            
-        .h2:hover{
-              font-size:405%;  
-            }
 
+        .h2:hover{
+          font-size:405%;  
+        }
         .button{
             margin: 5px;
             outline: none;
@@ -107,6 +106,28 @@
             padding-right: 22px;
             
         }
+        #ETD {
+            padding:10px;
+            margin:5px;  
+            border: thin solid black;
+            border-radius: 1px;
+            width: 145px;
+            height: 16px;
+            font-size:80%;
+            font-family: sohne, "Helvetica Neue", Helvetica, Arial, sans-serif;
+        }
+        
+        #ETA{
+            
+            padding:10px;
+            margin:5px;  
+            border: thin solid black;
+            border-radius: 1px;
+            width: 145px;
+            height: 16px;
+            font-size:80%;
+            font-family: sohne, "Helvetica Neue", Helvetica, Arial, sans-serif;
+        }
     </style>
 
     {% load static %}
@@ -126,28 +147,50 @@
         {% csrf_token %}
 
         <div class="line">
-            {{ form.number }}         
-            {{ form.bknumber }}
-            {{ form.ETD }}
-            {{ form.ETA }}
+            {{ form.forwarder }}         
+            {{ form.carrier }}         
+            {{ form.number }}  
             {{ form.Magic.label }}
             {{ form.Magic }}    
             {{ form.Customs.label }}
             {{ form.Customs }}
             {{ form.BK.label }}
             {{ form.BK }}
+        </div>
+        <div class="line">  
+            {{ form.bknumber }}
+            {{ form.ETD }}
+            {{ form.ETA }}
             {{ form.SI.label }}
             {{ form.SI }}
-           
+            {{ form.shipinstr }}
         </div>
         <button type="submit" class="button">Submit</button>
         <a href = "{% url 'Monthly1' Shipment %}" class='link'>Monthly</a>
         <a href = "{% url 'Result' number  %}" class=link>Back</a>
         <a href = "{% url 'ShipmentDelete1' Shipment %}" class='link'>Delete</a>
     </form>
+     
+     
+
 </div>
    
+
+<script type="text/javascript">
+    const countries = {{orders|safe}};
+  
+</script>
+<script src="{% static 'Script1.js' %}">
+</script>
 </body>
 
 </html>
+
+
+
+
+
+
+
+
 
