--- a/inputs/templates/MonthlyReport.html
+++ b/inputs/templates/MonthlyReport.html
@@ -257,6 +257,7 @@
             <td class=row0> Carrier </td>            
             <td class=row0> ETD </td>
             <td class=row0> ETA </td>
+            <td class=row0> SI number </td>
             <td class=row0> M $ </td>
             <td class=row0> M € </td>
         </tr>
@@ -292,6 +293,9 @@
             
             <td class=row2> {{ item.ETD }} </td>
             <td class=row2> {{ item.ETA }} </td>
+    
+            <td class=row2> {{ item.shipinstr }} </td>
+
             
             {% if item.margin <= 0 %}
             <td class=row5> {{ item.margin }} </td>
