--- a/templates/UpdateSO.html
+++ b/templates/UpdateSO.html
@@ -236,6 +236,7 @@
 </div>
 
 <script type="text/javascript">
+    const current = {{current|safe}};
     const values = {{ports|safe}};
 </script>
 <script src="{% static 'Script1.js' %}"></script>
