--- a/templates/DeleteSO.html
+++ b/templates/DeleteSO.html
@@ -31,7 +31,7 @@
 
         }
 
-        .button{
+        button{
             margin: 5px;
             outline: none;
             border: thin solid black;
@@ -46,7 +46,7 @@
            
         }
 
-        .button:hover {
+        button:hover {
     
             background: black;
             outline: none;
