--- a/templates/Search.html
+++ b/templates/Search.html
@@ -94,6 +94,7 @@
 
 <script type="text/javascript">
     const values = {{all|safe}};
+    const current = '';
 </script>
 <script src="{% static 'Script1.js' %}">
 </script>
