--- a/templates/Aways.html
+++ b/templates/Aways.html
@@ -47,7 +47,7 @@
         }
         
         .row {
-            background-color: #ffd70063;
+            background-color: deeppink;
             font-size:90%;
      
         }        
