--- a/templates/MonthlyReportPart.html
+++ b/templates/MonthlyReportPart.html
@@ -210,6 +210,9 @@
             <td class=row2> {{ item.ETD }} </td>
             <td class=row2> {{ item.ETA }} </td>
             
+            <td class=row2> {{ item.shipinstr }} </td>
+            <td class=row2> {{ item.equip }} </td>
+            
             {% if item.margin <= 0 %}
             <td class=row5> {{ item.margin }} </td>
             {% endif %}
