--- a/templates/MonthlyUpdate.html
+++ b/templates/MonthlyUpdate.html
@@ -103,7 +103,8 @@
         }
         .currency {        
             padding:9px;
-            margin:5px;  
+            margin:5px;
+            margin-left: 50px;
             border: thin solid black;
             border-radius: 1px;
         }
