--- a/templates/ParticularSO.html
+++ b/templates/ParticularSO.html
@@ -233,7 +233,7 @@
             <td>Tons</td>
             <td>MT/cntr</td>
             <td>Sales price</td>
-            <td>Cust. payments terms</td>
+            <td>CPT</td>
             <td>Comment</td>
             <td>Closed</td>
         </tr>
