--- a/templates/viewscosts.html
+++ b/templates/viewscosts.html
@@ -131,7 +131,7 @@
         </tr>
         {% endfor %}
         <tr>
-            <td class=row1><a href = "{% url 'Particular' city %}"class=link1>Back</a> </td>
+            <td class=row1><a href = "{% url 'Particular' city ' ' %}"class=link1>Back</a> </td>
             <td class=row1><a href = "{% url 'CostCreate' shipment_id %}"class=link1>Create</a> </td>
         </tr>
     </table>
