--- a/static/Style.css
+++ b/static/Style.css
@@ -177,7 +177,8 @@ body {
   display: block;
   padding: 5px; 
 }
-.dropdown:hover .dropdown-content {display: block;}
+.dropdown:hover .dropdown-content {display: block;background-color: white;}
+
 .dropdown-content a:hover {background-color: gold;}
 
 .manage{
@@ -194,12 +195,12 @@ body {
 .one {
     padding:10px;
     margin:5px;  
-    margin-left:40px;
+    margin-left: 40px;
     border: thin solid black;
     border-radius: 1px;
     position: absolute;
-    left:1000px;
-    top: 70px;
+
+    width: 100px;
 }
 .box {
     width: 1400px;
@@ -245,15 +246,5 @@ body {
     overflow-y: auto;
     overflow-x: auto;
 }
-li {
-    list-style: none;
-    padding: 3px;
-    font-family: sohne, "Helvetica Neue", Helvetica, Arial, sans-serif;
-    font-size:85%;
-}
 
-li:hover {
-    cursor: pointer;
-    background: gold;
-}
 
