--- a/templates/MonthlyUpdate1.html
+++ b/templates/MonthlyUpdate1.html
@@ -84,7 +84,7 @@
             border-radius: 1px;
            }
         
-        .limk:hover {
+        .link:hover {
     
             background: black;
             outline: none;
@@ -101,8 +101,14 @@
             text-align:left;
 
         }
-
-        .back {
+        .currency {        
+            padding:9px;
+            margin:5px; 
+            margin-left: 50px;
+            border: thin solid black;
+            border-radius: 1px;
+        }
+        .but {
             outline: none;
             border: thin solid black;
             text-decoration: none;
@@ -117,7 +123,7 @@
            }
 
 
-        .back :hover {
+        .but:hover {
             background: black;
             color: white;
             outline: none;
@@ -139,12 +145,12 @@
             padding-right: 11px;
            }
 
-        .delete :hover {
+        .delete:hover {
             background: black;
             color: white;
             outline: none;
-
         }
+        
         #podate {
             margin-left: 30px;
         }
@@ -186,12 +192,6 @@
         }
         #shipinstr {
             margin-left: 63px;
-        }
-        .currency {        
-            padding:9px;
-            margin:5px;  
-            border: thin solid black;
-            border-radius: 1px;
         }
     </style>
 
@@ -258,11 +258,10 @@
             
             {{ form.Tons.label }}           
             {{ form.Tons }}
-            
-
-                        
+                                    
         </div>
         <div class="line1">
+        
             {{ form.min.label }}
             {{ form.min }}
             
@@ -271,20 +270,23 @@
             
             {{ form.ETA.label }}
             {{ form.ETA }}
-            
+                 
             {{ form.bknumber.label }}
             {{ form.bknumber }}
+            
         </div>
         <div class="line1">
             {{ form.shipinstr.label }}
             {{ form.shipinstr }}
+            
+            {{ form.equip.label }}
+            {{ form.equip }}
         </div>
         
-        
-
         <a href = "{% url 'MonthlyDelete1' id  %}" class="delete">Del</a>
         <button type="submit" class="button">OK</button>
-        <a href = "{% url 'Result' number  %}" class="back">Back</a> 
+        <a href = "{% url 'Result' number  %}" class="but">Back</a> 
+        <a href="{% url  'MonthlyCreate' id %}" class ='but'>Duplicate</a>
     </form>
     <br>
 
@@ -293,3 +295,4 @@
 </body>
 
 </html>
+
