--- a/templates/ShowFreight.html
+++ b/templates/ShowFreight.html
@@ -113,6 +113,10 @@
             font-family: sohne, "Helvetica Neue", Helvetica, Arial, sans-serif;
             white-space: nowrap;
         }
+        .n {
+            max-width:150px;
+            overflow-x: auto;
+        }
     </style>
 
 </head>
@@ -137,32 +141,31 @@
             <td> Rate </td>
             <td> Additional </td>
             <td> Margin </td> 
-            
         </tr>
         {% for i in price %}
-        <tr>
-            <td class=row> {{ i.forwarder }} </td>
-            <td class=row> {{ i.Line }} </td>
-            <td class=row> {{ i.POL }} </td>
-            <td class=row> {{ i.POD }} </td>
-            <td class=row> {{ i.terms }} </td>
-            <td class=row> {{ i.period }} </td>
-            <td class=row> {{ i.contract }} </td>  
+        <tr class = row>
+            <td> {{ i.forwarder }} </td>
+            <td> {{ i.Line }} </td>
+            <td> {{ i.POL }} </td>
+            <td> {{ i.POD }} </td>
+            <td> {{ i.terms }} </td>
+            <td> {{ i.period }} </td>
+            <td class=n> {{ i.contract }} </td>  
             
             
             {% if i.currencyrate == 'USD' %}
-            <td class=row> {{ i.rate }}{{'$'}} </td>
+            <td> {{ i.rate }}{{'$'}} </td>
             {% endif %}
             {% if i.currencyrate == 'EUR' %}
-            <td class=row> {{ i.rate }}{{'€'}} </td>
+            <td> {{ i.rate }}{{'€'}} </td>
             {% endif %}   
                         
             {% if i.currencyadd == 'USD' %}
-            <td class=row> {{ i.additional }}{{'$'}} </td>
+            <td> {{ i.additional }}{{'$'}} </td>
             {% endif %}
             
             {% if i.currencyadd == 'EUR' %}
-            <td class=row> {{ i.additional }}{{'€'}} </td>
+            <td> {{ i.additional }}{{'€'}} </td>
             {% endif %} 
             
             {% if i.margin <= 0 %}
@@ -179,8 +182,9 @@
         </tr>
         {% endfor %}
     </table>
-    <a href = "{% url 'Particular' country  %}" class=row1>Back</a>
+    <a href = "{% url 'Particular' country ' ' %}" class=row1>Back</a>
     <a href = "{% url 'Skip' readiness_id  %}" class=row1>Truck</a>
+    <a href = "{% url 'Spot' readiness_id  %}" class=row1>Spot</a>
 </div>
 </body>
 </html>
