--- a/templates/UpdateShipment.html
+++ b/templates/UpdateShipment.html
@@ -171,7 +171,7 @@
         <button type="submit" class="button">Submit</button>
         <a href = "{% url 'Monthly' Shipment %}" class='link'>Monthly</a>
         <a href = "{% url 'buffer' Shipment %}" class='link'>Buffer</a>
-        <a href = "{% url 'Particular' city  %}" class=link>Back</a>
+        <a href = "{% url 'Particular' city ' ' %}" class=link>Back</a>
         <a href = "{% url 'ShipmentDelete' Shipment %}" class='link'>Delete</a>
     </form>
      
