--- a/templates/views.html
+++ b/templates/views.html
@@ -19,7 +19,16 @@
             font-size:80%;
             font-family: sohne, "Helvetica Neue", Helvetica, Arial, sans-serif;
         }
-        
+        .one {
+            padding:10px;
+            margin:5px;  
+            margin-left: 40px;
+            border: thin solid black;
+            border-radius: 1px;
+            position: absolute;
+
+            width: 100px;
+        }
         .button:hover {
             background: black;
             outline: none;
@@ -85,11 +94,23 @@
             color: black;
         }
         .variants {
-            width: 167px;
+            width: 122px;
             max-height: 55px;
             background-color: white;
             position: absolute;
-            left: 1040px;
+            left: 1085px;
+            top: 112px;
+            z-index: 1;
+            overflow-y: auto;
+            overflow-x: auto;
+        }
+        
+        .variants1 {
+            width: 122px;
+            max-height: 55px;
+            background-color: white;
+            position: absolute;
+            left: 955px;
             top: 112px;
             z-index: 1;
             overflow-y: auto;
@@ -116,16 +137,16 @@
      
         }    
         
-          .row2 {
+        .row2 {
             background-color: #1f39bf9f; 
               
         }    
         
-          .row3 {
+        .row3 {
             background-color: red; 
         }     
         
-          .row4 {
+        .row4 {
             background-color: #7FFF00; 
         }     
         
@@ -162,6 +183,11 @@
             color: black;
             font-size:90%;
            }
+        
+        h1 {
+            font-size:110%;
+            font-family: sohne, "Helvetica Neue", Helvetica, Arial, sans-serif;
+        }
 
 
         .link1:hover {
@@ -182,6 +208,7 @@
 
             color: black;
             font-size:90%;
+            font-family: sohne, "Helvetica Neue", Helvetica, Arial, sans-serif;
            }
 
 
@@ -201,7 +228,7 @@
 
         .box {
             max-width: 1500px;
-            margin: 270px auto;
+            margin: 0px auto;
             position: relative;
             text-align: center;
             height: 1100px;
@@ -210,22 +237,45 @@
             white-space: nowrap;
             font-family: sohne, "Helvetica Neue", Helvetica, Arial, sans-serif;
         }
-        
+        #search1 {
+            left:1045px;
+            top: 70px;
+        }
+        #search2 {
+            left:915px;
+            top: 70px;
+        }
         #ex {
             max-width: 150px;
             overflow-x: auto;
+        }
+        .particular {
+            position: relative;
+            margin-top: 200px;
+            margin-left: 20px;
+            font-family: sohne, "Helvetica Neue", Helvetica, Arial, sans-serif;
         }
     </style>
 
 </head>
 <body>
 <a href = "{% url 'OPS'  %}" class=h2>VIPA</a>
+<div class='particular'>
+    <a href = "{% url 'Away' moveaway.id  %}" class='link2'>Move Aways {{ cm }} mt</a>
+    {% for i in countries %}
+    <a href = "{% url 'ParticularSO' i ' ' %}" class=link2>{{ i }}</a>
+    {% endfor %}
+</div>  
 <form method = 'POST'>
     {% csrf_token %}
-    {{ form }}
+    {{ form.number }}
+    {{ form.number1 }}
     <button type="submit" class='button'>Filter</button>
-    <div class ="variants" id ="variants"></div>
-</form>  
+    <div class ="variants" id ="variants_box1"></div>
+    <div class ="variants1" id ="variants_box2"></div>
+</form>
+
+    
 <div class = "box">
     <table class="table" align="center">
         <tr>
@@ -238,29 +288,13 @@
             <td>Tons</td>
             <td>MT/cntr</td>
             <td>Sales price</td>
-            <td>Cust. payments terms</td>
+            <td>CPT</td>
             <td>Comment</td>
             <td>Closed</td>
         </tr>
 
         {% for sale in sales %}
-        {% if sale.number == '00-0000' %}
-        <tr>
-            <td class=away> {{ '' }} </td>
-            <td class=away> {{ '' }} </td>
-            <td class=away> {{ '' }} </td>
-            <td class=away> {{ 'Moves Away' }} </td>
-            <td class=away> {{ '' }} </td>
-            <td class=away> {{ '' }} </td>
-            <td class=away> {{ '' }} </td>
-            <td class=away> {{ '' }} </td>
-            <td class=away> {{ '' }} </td>
-            <td class=away> {{ '' }} </td>
-            <td class=away> {{ '' }} </td>
-            <td class=away> {{ closed|get_item:sale.id }} </td>
-            <td><a href = "{% url 'Away' sale.id  %}" class='link2'>Show</a></td>
-        </tr>
-        {% else %}
+        {% if sale.number != '00-0000' %}
         <tr>
             <td class=row> {{ sale.client }} </td>
             <td class=row> {{ sale.destination }} </td>
@@ -292,8 +326,9 @@
 <div/>
 </body>
 <script type="text/javascript">
-    const values = {{all|safe}};
+    const values1 = {{all|safe}};
+    const values2 = {{all|safe}};
 </script>
-<script src="{% static 'ScriptOPS.js' %}">
+<script src="{% static 'ScriptPO.js' %}">
 </script>
 </html>
