--- a/templates/viewsClaim.html
+++ b/templates/viewsClaim.html
@@ -70,19 +70,7 @@
             outline: none;
 
         }
-        
-
-        
-        .container1 {
-            position: absolute;
-            left: 50%;
-            top: 45%;
-            transform: translate(-50%, -50%);
-            font-size:110%;
-            text-align: center;
-            font-family: sohne, "Helvetica Neue", Helvetica, Arial, sans-serif;
-            white-space: nowrap;
-        }
+    
         
         .row2 {
             
@@ -155,13 +143,12 @@
             outline: none;
             border: thin solid black;
             text-decoration: none;
-            padding: 10px;
-            padding-bottom: 9px;
-            position: absolute;
-            top:45px;
-            left:940px;
+            padding: 11px;
+            padding-bottom: 7px;
+            position: relative;
+            margin-top: -20px;
             color: black;
-            font-size:71%;
+            font-size:80%;
            }
 
         .delete1:hover {
@@ -176,13 +163,11 @@
             outline: none;
             border: thin solid black;
             text-decoration: none;
-            padding: 10px;
-            padding-bottom: 9px;
-            position: absolute;
-            top:45px;
-            left:880px;
+            padding: 11px;
+            padding-bottom: 7px;
+            position: relative;
             color: black;
-            font-size:71%;
+            font-size:80%;
            }
 
         .update1:hover {
@@ -198,7 +183,7 @@
         }
         
         .box {
-            width: 1000px;
+            width: 1100px;
             margin: 120px auto;
             position: relative;
             text-align: center;
@@ -206,6 +191,8 @@
             overflow-y: auto;
             overflow-x: auto;
             white-space: nowrap;
+            font-size: 100%;
+            font-family: sohne, "Helvetica Neue", Helvetica, Arial, sans-serif;
         }
     </style>
 
