--- a/templates/OPS.html
+++ b/templates/OPS.html
@@ -135,7 +135,16 @@
             text-decoration: none;
             position: absolute;
         }
-        
+        .box {
+            width: 1400px;
+            margin: 15px auto;
+            position: relative;
+            text-align: center;
+            height: 505px;
+            overflow-y: auto;
+            overflow-x: auto;
+            white-space: nowrap;
+        }
         .link3:hover{
             font-size: 135%
         }
