--- a/templates/UpdateShipment1.html
+++ b/templates/UpdateShipment1.html
@@ -163,14 +163,15 @@
             {{ form.Customs }}
             {{ form.BK.label }}
             {{ form.BK }}
+            {{ form.SI.label }}
+            {{ form.SI }}
         </div>
         <div class="line"> 
             {{ form.shipinstr }}
             {{ form.bknumber }}
             {{ form.ETD }}
             {{ form.ETA }}
-            {{ form.SI.label }}
-            {{ form.SI }}
+            {{ form.link }}
         </div>
         <button type="submit" class="button">Submit</button>
         <a href = "{% url 'Monthly1' Shipment %}" class='link'>Monthly</a>
