--- a/templates/viewspo.html
+++ b/templates/viewspo.html
@@ -159,6 +159,7 @@
             <td> Destination </td>
             <td> Cntrs </td>
             <td> Tons </td>
+            <td> Sailed </td>
             <td> Price </td>
         </tr>
         {% for purchaise in purchaises %}
@@ -170,7 +171,7 @@
             <td> {{ purchaise.Origin }} </td>
             <td> {{ purchaise.cntr }} </td>
             <td> {{ purchaise.Tons }} </td>
-            
+            <td> {{ sailed|get_item:purchaise.id }} </td>            
             {% if purchaise.currency == 'USD' %}
             <td> {{ purchaise.price }}{{'$'}} </td>
             {% endif %}
