--- a/templates/OPS.html
+++ b/templates/OPS.html
@@ -111,13 +111,11 @@
             background: gold;
         }
 
-        .row2t {
-            background-color: #1f39bf9f;
-            border: 1px solid black;
+        .row2t,{
+            background-color: #e6e6ff;
         }
         .row0t {
-            background-color: #07f5f5f4;
-            border: 1px solid black;
+            background-color: #00008;
         }
         #ex {
             max-width: 120px;
