--- a/templates/OPS.html
+++ b/templates/OPS.html
@@ -112,10 +112,10 @@
         }
 
         .row2t,{
-            background-color: #e6e6ff;
+            background-color: #9ca4ff;
         }
         .row0t {
-            background-color: #00008;
+            background-color: #000fb5;
         }
         #ex {
             max-width: 120px;
