--- a/templates/Particular.html
+++ b/templates/Particular.html
@@ -108,13 +108,11 @@
             margin: 10px;
             width: 40%;
         }    
-        .row2t {
-            background-color: #1f39bf9f;
-            border: 1px solid black;
+        .row2t{
+            background-color: #3333ff;
         }
         .row0t {
-            background-color: #07f5f5f4;
-            border: 1px solid black;
+            background-color: #b3b3ff;
         }
         .row3 {
             padding: 10px;
