--- a/templates/OPS.html
+++ b/templates/OPS.html
@@ -112,7 +112,7 @@
         }
 
         .row2t{
-            background-color: #3333ff;
+            background-color: #4d4dff;
         }
         .row0t {
             background-color: #b3b3ff;
