--- a/templates/Particular.html
+++ b/templates/Particular.html
@@ -109,7 +109,7 @@
             width: 40%;
         }    
         .row2t{
-            background-color: #3333ff;
+            background-color: #4d4dff;
         }
         .row0t {
             background-color: #b3b3ff;
